--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 README
 
-The objective of this analysis is to compare US caselaw as related to privacy and UK caselaw as related to privacy by performing a distant reading and textual analysis of US / UK cases that reference privacy.
+The objective of this analysis is to compare US and UK privacy caselaw by performing a distant reading and textual analysis of US / UK cases that reference privacy.
 
 Scope of analysis: US Supreme Court Cases 1997 - 2023; UK House of Lords Cases 1997 - 2009; UK Supreme Court Cases 2009 - 2023.
 
