--- a/README
+++ b/README
@@ -7,7 +7,7 @@ The objective of this analysis is to compare US and UK privacy caselaw by perfor
 Scope of analysis: US Supreme Court Cases 1997 - 2023; UK House of Lords Cases 1997 - 2009; UK Supreme Court Cases 2009 - 2023.
 
 
-Instructions: In order to run the analysis, download the folder and navigate to the directory in your terminal. Then enter "python Run.py". Run.py will gather raw HTML data for cases from 1997 to 2023, convert them to readable text, and then run Comparative_analysis.Rmd, which runs R code to perform the distant reading analysis. It then outputs Comparative_analysis.html to view the R code, explanations, and graphs that demonstrate the differences between US and UK privacy cases. 
+Instructions: In order to run the analysis, download the folder and navigate to the directory in your terminal. Then enter "python Run.py". Run.py will gather raw HTML data for cases from 1997 to 2023, convert them to readable text, and then run Comparative_analysis.Rmd, which runs R code to perform the distant reading analysis. It then outputs Comparative_analysis.html, which provides graphs that demonstrate the differences between US and UK privacy cases. 
 
 
 Input: Input_files contains the input for this project, which is a set of three CSVs that contain URLs for each US, UKSC, and UKHL case in the timeframe. However, for the sake of time, I have already performed the first step and downloaded the raw HTML extract from each page in the CSV. Thus, the input raw HTML extracts already exist in the Intermediate_files/ folder. If you would like to start from scratch and work off of the CSVs instead of the pre-downloaded raw HTML extracts, please see "Additional options" below. 
