--- a/Comparative_analysis.Rmd
+++ b/Comparative_analysis.Rmd
@@ -7,18 +7,20 @@ output: html_document
 
 # Introduction
 
-The objective of this analysis is to explore the comparisons between privacy-related cases in the US and the UK highest courts. 
-Time period analyzed: Jan 1997 - Dec 2023.
-Court systems: US Supreme Court; UK House of Lords (Jan 1997 - July 2009); UK Supreme Court (July 2009 - Dec 2023)
-
-Outputs:
-Figure 1 shows the keywords that are more highly correlated with US cases with at least one instance of the word "privacy" versus UK cases with at least one instance of the word "privacy."
-Figure 2 shows the keywords that are more highly correlated with US cases with at least ten instances of the word "privacy" versus UK cases with at least ten instances of the word "privacy."
-Figure 3 shows the keywords that are more highly correlated with co-existing in the same paragraph or textual proximity as the word "privacy" in US cases versus keywords that are more highly correlated with co-existing in the same paragraph or textual proximity as the word "privacy" in UK cases
-Figure 4 shows the frequency of privacy-included cases (cases with at least one instance of "privacy") and privacy-focused cases (cases with at least ten instances of "privacy") over the years.
-
+*The objective of this analysis is to explore the comparisons between privacy-related cases in the US and the UK highest courts.* \
+**Time period analyzed:** Jan 1997 - Dec 2023. \
+**Court systems:** US Supreme Court; UK House of Lords (Jan 1997 - July 2009); UK Supreme Court (July 2009 - Dec 2023) \
+\
+**Outputs:** \
+**Figure 1** shows the frequency of privacy-included cases (cases with at least one instance of "privacy") and privacy-focused cases (cases with at least ten instances of "privacy") over the years. \
+**Figure 2a** shows the keywords that are more highly correlated with US cases with at least one instance of the word "privacy" versus UK cases with at least one instance of the word "privacy." \
+**Figure 2b** shows the keywords that are more highly correlated with US cases with at least ten instances of the word "privacy" versus UK cases with at least ten instances of the word "privacy." \
+**Figure 3** shows the keywords that are more highly correlated with co-existing in the same paragraph or textual proximity as the word "privacy" in US cases versus keywords that are more highly correlated with co-existing in the same paragraph or textual proximity as the word "privacy" in UK cases. \
+**Figure 4a** shows the keywords that are most privacy-specific in the UK by performing a keyword comparison between UK cases with at least one instance of privacy and UK cases without a reference to privacy. \
+**Figure 4b** shows the keywords that are most privacy-specific in the US by performing a keyword comparison between US cases with at least one instance of privacy and US cases without a reference to privacy. \
+\
 NOTE: The threshold of 10 was chosen to distinguish between "privacy-included" and "privacy-focused" from performing close reading on a set of at least 3 cases for each decile of frequency of the word "privacy." For each close reading, a subjective opinion was given on whether the case was truly privacy-focused. For cases with fewer than 10 instances of the word "privacy," the percentage of privacy-focused categorizations were relatively consistent at \~40%. For cases with greater than 10 instances of the word "privacy," each sample case was categorized as privacy-focused. Thus, the subjective threshold of 10 was determined for this step.
-
+\
 
 # Step 0. Package installation
 
@@ -37,7 +39,7 @@ library(dplyr)
 
 # Step 1. File inputs
 
-Objective: Gathering data and storing data into tibbles for easy analysis.
+Objective: Gathering data and storing data into tibbles for easy analysis. \
 
 1a. First, the filepaths to input files are saved as strings.
 ```{r}
@@ -55,7 +57,7 @@ UKSC_files_list <- list.files(UKSC_folder, full.names = T, pattern = "txt")
 
 # Step 2. Reading inputs into tibbles
 
-Objective. Transform the list of files from Step 1 into tibbles that can be utilized in R. 
+Objective. Transform the list of files from Step 1 into tibbles that can be utilized in R. \
 
 2a. Three tibbles are created, one for each list of files from step 1b. Each tibble contains the file name, the text in each file, the country of each file, and the count of the number of instances of the word "privacy" in the file. Additionally, the text is cleaned by replacing multiple spaces in a row with a single space.
 ```{r}
@@ -83,154 +85,18 @@ UKSC_corpus <- readtext(UKSC_files_list, encoding = "UTF-8") %>%
 combined_tibble <- bind_rows(US_corpus, UKHL_corpus, UKSC_corpus)
 ```
 
-# Step 3. Analysis of whole-file keyword comparisons in cases with at least 1 instance of privacy
+# Step 3. Frequency analysis
 
-Objective: Understand which keywords are more highly correlated with US cases with at least one instance of "privacy" versus UK cases with at least one instance of "privacy."
+Objective: Determine the frequency distribution of privacy-included cases (cases with at least one instance of "privacy") and privacy-focused cases (cases with at least ten instances of "privacy") from 1997 to 2023. \
 
-3a. The combined tibble is filtered on privacy_count \> 0
-```{r}
-privacy_tibble <- combined_tibble %>%
-  filter(privacy_count > 0)
-```
-
-3b. A privacy corpus is created by using corpus() function on the filtered tibble
-```{r}
-privacy_corpus <- quanteda::corpus(privacy_tibble,
-                                   docid_field = "doc_id",
-                                   text_field = "text",
-                                   meta = c("country", "privacy_count"))
-```
-3c. The privacy corpus is tokenized into word-based tokens using the tokens() function, which removes punctuation and splits the text into word-based tokens. Stopwords are then removed. The additional words that were removed were based on running this R code and seeing that the below words appeared and were not meaningful for our analysis.
-```{r}
-tokenized_privacy_corpus <- tokens(privacy_corpus, remove_punct = TRUE) %>%
-  tokens_remove(stopwords("english")) %>%
-  tokens_remove(c("ac", "lj", "e.g", "c", "f", "n", "u", "s", "_", "___", "__", "____", "see")) 
-```
-
-3d. The tokenized corpus is then converted into a dfm (document-feature matrix), which stores the frequency of each word and allows for analysis of word frequencies and other textual analysis. The grouping by country allows for frequency to be compared across countries.
-```{r}
-grouped_tokenized_privacy_corpus <- tokenized_privacy_corpus %>% tokens_group(groups = country)
-privacy_tokens_dfm <- dfm(grouped_tokenized_privacy_corpus)
-```
-
-3e. Next, the keyness of each word in the document-feature matrix is calculated, which measures the importance of individual words in a text. After the keyness is calculated, it is plotted on a graph that shows the most important words in the text, highlighting the differences between the most important words in the two countries.
-```{r}
-privacy_result_keyness <- textstat_keyness(privacy_tokens_dfm)
-```
-
-**FIGURE 1**
-```{r}
-textplot_keyness(privacy_result_keyness) 
-```
-
-
-# Step 4. Analysis of whole-file keyword comparisons in cases with at least 10 instances of privacy.
-
-Objective: Understand which keywords are more highly correlated with US cases with at least ten instances of "privacy" versus UK cases with at least ten instances of "privacy." This is intended to provide better insights than Step 3, since it reduces the "noise" of cases with a miscellaneous reference to privacy while it isn't the core focus of the case. 
-
-4a. The combined tibble is filtered on privacy_count \>= 10
-```{r}
-privacy_10_tibble <- combined_tibble %>%
-  filter(privacy_count >= 10)
-```
-
-4b. A privacy\>=10 corpus is created by using corpus() function on the filtered tibble.
-```{r}
-privacy_10_corpus <- quanteda::corpus(privacy_10_tibble,
-                                   docid_field = "doc_id",
-                                   text_field = "text",
-                                   meta = c("country", "privacy_count"))
-```
-
-4c. The privacy corpus is tokenized into word-based tokens using the tokens() function, which removes punctuation and splits the text into word-based tokens. Stopwords are then removed. The additional words that were removed were based on running this R code and seeing that the below words appeared and were not meaningful for our analysis.
-```{r}
-tokenized_privacy_10_corpus <- tokens(privacy_10_corpus, remove_punct = TRUE) %>%
-  tokens_remove(stopwords("english")) %>%
-  tokens_remove(c("ac", "lj", "e.g", "c", "f", "n", "u", "s", "_", "___", "__", "____", "see")) %>%
-  tokens_group(groups = country)
-```
-
-4d. The tokenized corpus is then converted into a dfm (document-feature matrix), which stores the frequency of each word and allows for analysis of word frequencies and other textual analysis. The grouping by country allows for frequency to be compared across countries.
-```{r}
-privacy_10_tokens_dfm <- dfm(tokenized_privacy_10_corpus)
-```
-
-4e. The keyness of each word in the filtered document-feature matrix is calculated, which shows the keywords most highly correlated with US cases with at least ten instances of privacy versus the keywords most highly correlated with UK cases with at least ten instances of privacy.
-```{r}
-privacy_10_result_keyness <- textstat_keyness(privacy_10_tokens_dfm)
-```
-
-**FIGURE 2**
-```{r}
-textplot_keyness(privacy_10_result_keyness) 
-```
-
-# Step 5. Analysis of paragraph-based keyword comparisons of words surrounding privacy.
-
-Objective: Understand which keywords are most highly associated with being "close" in proximity to the word "privacy" in the US versus in the UK.
-
-5a. A keyword in context test was performed, which provides data on each instance of the word "privacy" by providing the 10 words before and after each instance of the word "privacy" in each case. The kwic() function was performed on the tokenized privacy corpus from Step 3c.
-```{r}
-privacy_kwic <- as_tibble(kwic(tokenized_privacy_corpus, pattern = "privacy", window = 10))
-```
-
-5b. Country categorization was added to the keyword in context data.
-```{r}
-privacy_kwic_with_data <- as_tibble(left_join(privacy_kwic, combined_tibble, by = c('docname' = 'doc_id')))
-```
-
-5c. The "text" column is replaced with the full "paragraph" surrounding each instance of the word "privacy" -- meaning the concatenation of the 10 words before "privacy" + "privacy" + the 10 words after "privacy." 
-```{r}
-privacy_kwic_with_data <- privacy_kwic_with_data %>%
-  unite(text, pre, keyword, post, sep = " ", remove=FALSE)
-```
-
-5d. A unique ID was added for analysis (required for the dfm() function in step 5f).
-```{r}
-privacy_kwic_with_data <- privacy_kwic_with_data %>%
-  mutate(doc_id = row_number())
-```
-
-5e. The tibble was turned into a corpus and tokenized (See steps 3b and 3c for further details). 
-```{r}
-privacy_kwic_corpus <- quanteda::corpus(privacy_kwic_with_data,
-                            docid_field = "doc_id",
-                            text_field = "text",
-                            meta = "country")
-
-tokenized_privacy_kwic_corpus <- tokens(privacy_kwic_corpus, remove_punct = TRUE) %>%
-  tokens_remove(stopwords("english")) %>%
-  tokens_remove(c("ac", "lj", "e.g", "c", "f", "n", "u", "s", "_", "___", "__", "____", "see", "bailii", "t", "pp", "e", "said", "l")) %>%
-  tokens_group(groups = country)
-```
-
-5f. The tokenized corpus is then converted into a dfm (document-feature matrix), which stores the frequency of each word and allows for analysis of word frequencies and other textual analysis. The grouping by country allows for frequency to be compared across countries.
-```{r}
-privacy_kwic_dfm <- dfm(tokenized_privacy_kwic_corpus)
-```
-
-5g. The keyness of each word in the filtered document-feature matrix is calculated, which shows the keywords most highly correlated with paragraphs around each instance of "privacy" in US cases versus the keywords most highly correlated with paragraphs around each instance of "privacy" in UK cases.
-```{r}
-privacy_paragraph_result_keyness <- textstat_keyness(privacy_kwic_dfm)
-```
-
-**FIGURE 3**
-```{r}
-textplot_keyness(privacy_paragraph_result_keyness, n=20L, labelsize = 2) 
-```
-
-# Step 6. Frequency analysis
-
-Objective: Determine the frequency distribution of privacy-included cases (cases with at least one instance of "privacy") and privacy-focused cases (cases with at least ten instances of "privacy") from 1997 to 2023. 
-
-6a. Read in data from input files, including dates of each case
+3a. Read in data from input files, including dates of each case.
 ```{r}
 US_date_csv <- read_csv("Input_files/US_Cases.csv", col_names = TRUE, col_types="cDc")
 UKSC_date_csv <- read_csv("Input_files/UKSC_Cases.csv", col_names = TRUE, col_types="cDc")
 UKHL_date_csv <- read_csv("Input_files/UKHL_Cases.csv", col_names = TRUE, col_types="cDc")
 ```
 
-6b. Add dates to original corpora from step 2a
+3b. Add dates to original corpora from step 2a.
 ```{r}
 US_tibble_with_date <- left_join(US_corpus, US_date_csv, by = "doc_id")
 UKHL_tibble_with_date <- left_join(UKHL_corpus, UKHL_date_csv, by = "doc_id")
@@ -242,7 +108,7 @@ privacy_tibble_with_date <- combined_tibble_with_date %>%
   filter(privacy_count > 0)
 ```
 
-6c. Create a bar graph representing the number of cases in each category to see frequency distribution
+3c. Create a bar graph representing the number of cases in each category to see frequency distribution.
 ```{r, message=FALSE}
 # BAR GRAPH 
 intermed <- privacy_tibble_with_date %>%
@@ -256,10 +122,203 @@ grouped <- group_by(intermed, year, category, country) %>%
   summarise(count = length(doc_id))
 ```
 
-6d. Plot the bar graph using ggplot
-**FIGURE 4**
+3d. Plot the bar graph using ggplot. \
+**FIGURE 1**
 ```{r}
 ggplot(grouped, aes(x = year, y = count, fill = category)) +
   geom_bar(stat = "identity") +
   facet_wrap(~ country)
+```
+
+# Step 4. Analysis of whole-file keyword comparisons in cases with at least 1 instance of privacy
+
+Objective: Understand which keywords are more highly correlated with US cases with at least one instance of "privacy" versus UK cases with at least one instance of "privacy." \
+
+4a. The combined tibble is filtered on privacy_count \> 0
+```{r}
+privacy_tibble <- combined_tibble %>%
+  filter(privacy_count > 0)
+```
+
+4b. A privacy corpus is created by using corpus() function on the filtered tibble
+```{r}
+privacy_corpus <- quanteda::corpus(privacy_tibble,
+                                   docid_field = "doc_id",
+                                   text_field = "text",
+                                   meta = c("country", "privacy_count"))
+```
+4c. The privacy corpus is tokenized into word-based tokens using the tokens() function, which removes punctuation and splits the text into word-based tokens. Stopwords are then removed. The additional words that were removed were based on running this R code and seeing that the below words appeared and were not meaningful for our analysis.
+```{r}
+tokenized_privacy_corpus <- tokens(privacy_corpus, remove_punct = TRUE) %>%
+  tokens_remove(stopwords("english")) %>%
+  tokens_remove(c("ac", "lj", "e.g", "c", "f", "n", "u", "s", "_", "___", "__", "____", "see")) 
+```
+
+4d. The tokenized corpus is then converted into a dfm (document-feature matrix), which stores the frequency of each word and allows for analysis of word frequencies and other textual analysis. The grouping by country allows for frequency to be compared across countries.
+```{r}
+grouped_tokenized_privacy_corpus <- tokenized_privacy_corpus %>% tokens_group(groups = country)
+privacy_tokens_dfm <- dfm(grouped_tokenized_privacy_corpus)
+```
+
+4e. Next, the keyness of each word in the document-feature matrix is calculated, which measures the importance of individual words in a text. After the keyness is calculated, it is plotted on a graph that shows the most important words in the text, highlighting the differences between the most important words in the two countries.
+```{r}
+privacy_result_keyness <- textstat_keyness(privacy_tokens_dfm)
+```
+
+**FIGURE 2a**
+```{r}
+textplot_keyness(privacy_result_keyness) 
+```
+
+
+# Step 5. Analysis of whole-file keyword comparisons in cases with at least 10 instances of privacy.
+
+Objective: Understand which keywords are more highly correlated with US cases with at least ten instances of "privacy" versus UK cases with at least ten instances of "privacy." This is intended to provide better insights than Step 3, since it reduces the "noise" of cases with a miscellaneous reference to privacy while it isn't the core focus of the case. \
+
+5a. The combined tibble is filtered on privacy_count \>= 10
+```{r}
+privacy_10_tibble <- combined_tibble %>%
+  filter(privacy_count >= 10)
+```
+
+5b. A privacy\>=10 corpus is created by using corpus() function on the filtered tibble.
+```{r}
+privacy_10_corpus <- quanteda::corpus(privacy_10_tibble,
+                                   docid_field = "doc_id",
+                                   text_field = "text",
+                                   meta = c("country", "privacy_count"))
+```
+
+5c. The privacy corpus is tokenized into word-based tokens using the tokens() function, which removes punctuation and splits the text into word-based tokens. Stopwords are then removed. The additional words that were removed were based on running this R code and seeing that the below words appeared and were not meaningful for our analysis.
+```{r}
+tokenized_privacy_10_corpus <- tokens(privacy_10_corpus, remove_punct = TRUE) %>%
+  tokens_remove(stopwords("english")) %>%
+  tokens_remove(c("ac", "lj", "e.g", "c", "f", "n", "u", "s", "_", "___", "__", "____", "see")) %>%
+  tokens_group(groups = country)
+```
+
+5d. The tokenized corpus is then converted into a dfm (document-feature matrix), which stores the frequency of each word and allows for analysis of word frequencies and other textual analysis. The grouping by country allows for frequency to be compared across countries.
+```{r}
+privacy_10_tokens_dfm <- dfm(tokenized_privacy_10_corpus)
+```
+
+5e. The keyness of each word in the filtered document-feature matrix is calculated, which shows the keywords most highly correlated with US cases with at least ten instances of privacy versus the keywords most highly correlated with UK cases with at least ten instances of privacy.
+```{r}
+privacy_10_result_keyness <- textstat_keyness(privacy_10_tokens_dfm)
+```
+
+**FIGURE 2b**
+```{r}
+textplot_keyness(privacy_10_result_keyness) 
+```
+
+# Step 6. Analysis of paragraph-based keyword comparisons of words surrounding privacy.
+
+Objective: Understand which keywords are most highly associated with being "close" in proximity to the word "privacy" in the US versus in the UK. \
+
+6a. A keyword in context test was performed, which provides data on each instance of the word "privacy" by providing the 10 words before and after each instance of the word "privacy" in each case. The kwic() function was performed on the tokenized privacy corpus from Step 3c.
+```{r}
+privacy_kwic <- as_tibble(kwic(tokenized_privacy_corpus, pattern = "privacy", window = 10))
+```
+
+6b. Country categorization was added to the keyword in context data.
+```{r}
+privacy_kwic_with_data <- as_tibble(left_join(privacy_kwic, combined_tibble, by = c('docname' = 'doc_id')))
+```
+
+6c. The "text" column is replaced with the full "paragraph" surrounding each instance of the word "privacy" -- meaning the concatenation of the 10 words before "privacy" + "privacy" + the 10 words after "privacy." 
+```{r}
+privacy_kwic_with_data <- privacy_kwic_with_data %>%
+  unite(text, pre, keyword, post, sep = " ", remove=FALSE)
+```
+
+6d. A unique ID was added for analysis (required for the dfm() function in step 5f).
+```{r}
+privacy_kwic_with_data <- privacy_kwic_with_data %>%
+  mutate(doc_id = row_number())
+```
+
+6e. The tibble was turned into a corpus and tokenized (See steps 3b and 3c for further details). 
+```{r}
+privacy_kwic_corpus <- quanteda::corpus(privacy_kwic_with_data,
+                            docid_field = "doc_id",
+                            text_field = "text",
+                            meta = "country")
+
+tokenized_privacy_kwic_corpus <- tokens(privacy_kwic_corpus, remove_punct = TRUE) %>%
+  tokens_remove(stopwords("english")) %>%
+  tokens_remove(c("ac", "lj", "e.g", "c", "f", "n", "u", "s", "_", "___", "__", "____", "see", "bailii", "t", "pp", "e", "said", "l")) %>%
+  tokens_group(groups = country)
+```
+
+6f. The tokenized corpus is then converted into a dfm (document-feature matrix), which stores the frequency of each word and allows for analysis of word frequencies and other textual analysis. The grouping by country allows for frequency to be compared across countries.
+```{r}
+privacy_kwic_dfm <- dfm(tokenized_privacy_kwic_corpus)
+```
+
+6g. The keyness of each word in the filtered document-feature matrix is calculated, which shows the keywords most highly correlated with paragraphs around each instance of "privacy" in US cases versus the keywords most highly correlated with paragraphs around each instance of "privacy" in UK cases.
+```{r}
+privacy_paragraph_result_keyness <- textstat_keyness(privacy_kwic_dfm)
+```
+
+**FIGURE 3**
+```{r}
+textplot_keyness(privacy_paragraph_result_keyness, n=20L, labelsize = 2) 
+```
+
+# Step 7. Privacy versus non-privacy case comparisons
+Objective: Determine which keywords are specifically privacy-oriented by performing a comparative analysis between UK privacy-included and UK non-privacy included cases, then US privacy-included and US non-privacy included cases. \
+
+7a. Begin by creating a tibble that includes only UK cases and adding a column called "Privacy" which is equal to "Privacy-included" if the privacy count is greater than 0 and Non-privacy included if the privacy count is less than 0.
+```{r}
+UK_tibble <- bind_rows(UKHL_corpus, UKSC_corpus)
+UK_tibble_with_category <- mutate(UK_tibble, Privacy = case_when(privacy_count > 0 ~ "Privacy-included", TRUE ~ "Non-privacy included"))
+```
+
+7b. The UK tibble is converted into a corpus by using corpus() function on the filtered tibble, then tokenized into word-based tokens using the tokens() function, which removes punctuation and splits the text into word-based tokens. Stopwords are then removed. The additional words that were removed were based on running this R code and seeing that the below words appeared and were not meaningful for our analysis.
+```{r}
+UK_case_corpus <- quanteda::corpus(UK_tibble_with_category,
+                                   docid_field = "doc_id",
+                                   text_field = "text",
+                                   meta = c("country", "privacy_count"))
+tokenized_UK_corpus <- tokens(UK_case_corpus, remove_punct = TRUE) %>%
+  tokens_remove(stopwords("english")) %>%
+  tokens_remove(c("ac", "lj", "e.g", "c", "f", "n", "u", "s", "_", "___", "__", "____", "see")) 
+```
+
+7c. The tokenized corpus is then converted into a dfm (document-feature matrix), which stores the frequency of each word and allows for analysis of word frequencies and other textual analysis. The grouping by country allows for frequency to be compared across countries.
+```{r}
+grouped_tokenized_UK_corpus <- tokenized_UK_corpus %>% tokens_group(groups = Privacy)
+grouped_UK_tokens_dfm <- dfm(grouped_tokenized_UK_corpus)
+```
+
+7d. Next, the keyness of each word in the document-feature matrix is calculated, which measures the importance of individual words in a text. After the keyness is calculated, it is plotted on a graph that shows the most important words in the text, highlighting the differences between the most important words in the two countries.
+```{r}
+UK_grouped_result_keyness <- textstat_keyness(grouped_UK_tokens_dfm)
+```
+
+**FIGURE 4a**
+```{r}
+textplot_keyness(UK_grouped_result_keyness) 
+```
+
+7e. The same code is then performed for the US.
+```{r}
+US_tibble_with_category <- mutate(US_corpus, Privacy = case_when(privacy_count > 0 ~ "Privacy-included", TRUE ~ "Non-privacy included"))
+US_case_corpus <- quanteda::corpus(US_tibble_with_category,
+                                   docid_field = "doc_id",
+                                   text_field = "text",
+                                   meta = c("country", "privacy_count"))
+tokenized_US_corpus <- tokens(US_case_corpus, remove_punct = TRUE) %>%
+  tokens_remove(stopwords("english")) %>%
+  tokens_remove(c("ac", "lj", "e.g", "c", "f", "n", "u", "s", "_", "___", "__", "____", "see"))
+grouped_tokenized_US_corpus <- tokenized_US_corpus %>% tokens_group(groups = Privacy)
+grouped_US_tokens_dfm <- dfm(grouped_tokenized_US_corpus)
+US_grouped_result_keyness <- textstat_keyness(grouped_US_tokens_dfm)
+
+```
+
+**FIGURE 4b**
+```{r}
+textplot_keyness(US_grouped_result_keyness) 
 ```
