--- a/README
+++ b/README
@@ -28,7 +28,7 @@ Specifically:
 + Figure 2 shows the keywords that are more highly correlated with US cases with at least ten instances of the word "privacy" versus UK cases with at least ten instances of the word "privacy."
 + Figure 3 shows the keywords that are more highly correlated with co-existing in the same paragraph or textual proximity as the word "privacy" in US cases versus keywords that are more highly correlated with co-existing in the same paragraph or textual proximity as the word "privacy" in UK cases
 + Figure 4 shows the frequency of privacy-included cases (cases with at least one instance of "privacy") and privacy-focused cases (cases with at least ten instances of "privacy") over the years.
-
++ Figure 1 shows the frequency of privacy-included cases (cases with at least one instance of "privacy") and privacy-focused cases (cases with at least ten instances of "privacy") over the years. + Figure 2a shows the keywords that are more highly correlated with US cases with at least one instance of the word "privacy" versus UK cases with at least one instance of the word "privacy." + Figure 2b shows the keywords that are more highly correlated with US cases with at least ten instances of the word "privacy" versus UK cases with at least ten instances of the word "privacy." + Figure 3 shows the keywords that are more highly correlated with co-existing in the same paragraph or textual proximity as the word "privacy" in US cases versus keywords that are more highly correlated with co-existing in the same paragraph or textual proximity as the word "privacy" in UK cases. + Figure 4a shows the keywords that are most privacy-specific in the UK by performing a keyword comparison between UK cases with at least one instance of privacy and UK cases without a reference to privacy. + Figure 4b shows the keywords that are most privacy-specific in the US by performing a keyword comparison between US cases with at least one instance of privacy and US cases without a reference to privacy. 
 
 Additional options: Two parameter options exist for this run. The parameters accept True or False. For both, the default is False. 
 --install_r_packages: Set to True if you need to install the R packages required for Rmd to run. This will likely be necessary on your first time running this code if you haven't used R packages knitr or rmarkdown. After your first time running or if the R packages are already installed on your machine, feel free to leave this argument out. 
